@startuml

abstract class Image
class JPGImage
class PNGImage
class BMPImage
class GIFImage
interface ImageImp
class Matrix
class WindowsImp
class UnixImp
class LinuxImp

abstract class Image {
    # imp: ImageImp
    + setImageImp(ImageImp imp) : void
    + parseFile(String fileName) :void
}

class JPGImage {
    + parseFile(String fileName) : void
}

class PNGImage {
    + parseFile(String fileName) : void
}

class BMPImage {
    + parseFile(String fileName) : void
}

class GIFImage {
    + parseFile(String fileName) : void
}

interface ImageImp {
    + doPaint(Matrix m) : void
}

class WindowsImp {
    + doPaint(Matrix m) : void
}

class UnixImp {
    + doPaint(Matrix m) : void
}

class LinuxImp {
    + doPaint(Matrix m) : void
}

Image <|-- JPGImage
Image <|-- PNGImage
Image <|-- BMPImage
Image <|-- GIFImage
ImageImp <--o Image
ImageImp <|... WindowsImp
ImageImp <|... UnixImp
ImageImp <|... LinuxImp
Matrix <...ImageImp

@enduml
